[chore] #6 toList()